kubernetes/cluster/active/addons/kaniop/overlays/prod/kanidm-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: istio-ingress
  hostnames:
    - "id.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: idm
          namespace: kaniop
          port: 8443
          weight: 1
